# ai-sprint-planner

./: .env  .env.example  .gitignore  .~lock.sprint_tasks_template_short.xlsx#  docker-compose.yaml  main.py  pyproject.toml  sprint_report_20260429_131342.html  sprint_tasks_template.xlsx  sprint_tasks_template_short.xlsx
agents/: agent_builder.py  agent_factory.py  agents.py  critic_graph.py  inc_agent.py  logging_utils.py  model.py  promts_agent.yaml  task_agent.py
agents/tools/: common_tools.py  critic_tools.py  orbit_tools.py
report/: html_generator.py
store/: redis.py
tasks/: model.py  task.py
tasks/loader/: excel_loader.py  helpers.py
